# libras-robot-control

./: .gitignore  Dockerfile  README.md  docker-compose.yml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
src/controle_gestual/: CMakeLists.txt  package.xml
src/controle_gestual/controle_gestual/: controle_gestual_node.py
src/controle_gestual/launch/: robo.launch.py
src/controle_gestual/urdf/: my_robot.urdf
src/libras_control/: package.xml  setup.cfg  setup.py
src/libras_control/libras_control/: libras_control_node.py
src/libras_modelo_yolo/: package.xml  setup.cfg  setup.py
src/libras_modelo_yolo/libras_modelo_yolo/: carregador_modelo.py
src/libras_robo_real/: package.xml  setup.cfg  setup.py
src/libras_robo_real/launch/: robo_real.launch.py
src/libras_robo_real/libras_robo_real/: libras_robo_real_node.py
src/libras_simulacao/: package.xml  setup.cfg  setup.py
src/libras_simulacao/launch/: robo_tanque.launch.py
src/libras_simulacao/libras_simulacao/: libras_simulacao_node.py
src/libras_simulacao/urdf/: robo_tanque.urdf
